// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`createSandboxPlugin 使用自定义 css 沙箱名 my-sandbox 1`] = `
"const div = documentDCreateElement('div');
const a = {
  ____sandboxHash_____: () => 1
};
console.log(JSON.stringify(a));
const hash = ____sandboxHash_____();
console.log(hash);
function documentDCreateElement(...args) {
  var el = document.createElement(...args);
  el.setAttribute('my-sandbox');
  return el;
}
function ____sandboxHash_____() {
  return 'my-sandbox';
}"
`;

exports[`createSandboxPlugin 使用默认 css 沙箱名替换 1`] = `
"const div = documentDCreateElement('div');
const a = {
  ____sandboxHash_____: () => 1
};
console.log(JSON.stringify(a));
const hash = ____sandboxHash_____();
console.log(hash);
function documentDCreateElement(...args) {
  var el = document.createElement(...args);
  el.setAttribute('css-sandbox');
  return el;
}
function ____sandboxHash_____() {
  return 'css-sandbox';
}"
`;
